force-app/main/default/objects/ContactChange__c/ContactChange__c.object-meta.xml
<CustomObject>
    <description>When a change occurs on a contact (address, email, phone) log the incoming values so we have a record of what occurred.</description>
    <label>Contact Change</label>
    <nameField>
        <displayFormat>Change-{000000000}</displayFormat>
        <label>Change Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>