force-app/main/default/objects/ContactChange__c/fields/ChangeExternalId__c.field-meta.xml
<CustomField>
    <fullName>ChangeExternalId__c</fullName>
    <description>A unique id made up of the Id of the related contact and the type of user that updated the record (SFDC Data, Lead Loader, SF User, et al).</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Change External Id</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>