force-app/main/default/objects/ContactChange__c/fields/CityPrev__c.field-meta.xml
<CustomField>
    <fullName>CityPrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The previous value of the city.</inlineHelpText>
    <label>City Prev</label>
    <length>80</length>
    <type>Text</type>
</CustomField>