force-app/main/default/objects/ContactChange__c/fields/EmailPrev__c.field-meta.xml
<CustomField>
    <fullName>EmailPrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The previous value of the email address</inlineHelpText>
    <label>Email Prev</label>
    <type>Email</type>
</CustomField>