force-app/main/default/objects/ContactChange__c/fields/PhonePrev__c.field-meta.xml
<CustomField>
    <fullName>PhonePrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The previous value of the phone number</inlineHelpText>
    <label>Phone Prev</label>
    <type>Phone</type>
</CustomField>