force-app/main/default/objects/ContactChange__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>