force-app/main/default/objects/ContactChange__c/fields/PostalCodePrev__c.field-meta.xml
<CustomField>
    <fullName>PostalCodePrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code Prev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>