force-app/main/default/objects/ContactChange__c/fields/StatePrev__c.field-meta.xml
<CustomField>
    <fullName>StatePrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The previous value of the state.</inlineHelpText>
    <label>State Prev</label>
    <length>30</length>
    <type>Text</type>
</CustomField>