force-app/main/default/objects/ContactChange__c/fields/StreetPrev__c.field-meta.xml
<CustomField>
    <fullName>StreetPrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The previous value of the street.</inlineHelpText>
    <label>Street Prev</label>
    <length>120</length>
    <type>Text</type>
</CustomField>