force-app/main/default/objects/ContactChange__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description>The type of user - Ex. SFDC Data, SF User (non-generic), Lead Loader, et al.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>User Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>