force-app/main/default/objects/ContactChange__c/listViews/Yesterday.listView-meta.xml
<ListView>
    <fullName>Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>EmailPrev__c</columns>
    <columns>Phone__c</columns>
    <columns>PhonePrev__c</columns>
    <columns>PostalCode__c</columns>
    <columns>PostalCodePrev__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday</label>
</ListView>